<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RFIDScannerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/customActionBar"
            layout="@layout/layout_custom_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="108dp"
            android:layout_margin="8dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/btn_border"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_i"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/customActionBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="109dp"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_info"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tvCountOfTags"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/scan_count_text"
                    app:layout_constraintEnd_toEndOf="@+id/scan_count_text"
                    app:layout_constraintStart_toStartOf="@+id/scan_count_text" />

                <TextView
                    android:id="@+id/scan_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="0"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/divider"
                    app:layout_constraintHorizontal_bias="0.539"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.783" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tvTagCount"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/scan_total_text"
                    app:layout_constraintEnd_toEndOf="@+id/scan_total_text"
                    app:layout_constraintStart_toStartOf="@+id/scan_total_text" />

                <TextView
                    android:id="@+id/scan_total_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="0"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.783" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:padding="8dp"
                android:text="@string/carry_tid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_firmware"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_firmware"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:padding="8dp"
                android:text=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/checkBox"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/input_design_name"
            style="@style/TextInputLayout.blackcolor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_bg_edit_text"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:hint="Design Name"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_i" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scan_start_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/style_btn_corner"
            android:backgroundTint="@color/orange"
            android:shadowRadius="2"
            android:text="@string/btInventory"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/scan_clear_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_design_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scan_clear_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/style_btn_corner_red"
            android:shadowRadius="2"
            android:text="Clear"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scan_start_btn"
            app:layout_constraintTop_toBottomOf="@+id/input_design_name" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scan_start_btn">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/scan_title_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange"
                    android:divider="?android:attr/listDivider"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="DATA"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="COUNT"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="RSSI"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/scan_title_ll" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/scan_list_rv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>